--- a/index.ipynb
+++ b/index.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "_cell_guid": "32ee66ec-b64e-44ce-adca-2e587f073c37",
     "_uuid": "bd1d9a7ff1e06f5669dcd64ce96c95294e66c418"
@@ -155,7 +155,7 @@
        "7  female    5.75     150          9"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,7 +163,7 @@
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "data = None\n",
+    "data = pd.read_csv('gender.csv')\n",
     "data\n",
     "# \tPerson\theight\tweight\tfoot size\n",
     "# 0\tmale\t6.00\t180\t12\n",
@@ -174,6 +174,136 @@
     "# 5\tfemale\t5.50\t150\t8\n",
     "# 6\tfemale\t5.42\t130\t7\n",
     "# 7\tfemale\t5.75\t150\t9"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 8 entries, 0 to 7\n",
+      "Data columns (total 4 columns):\n",
+      "Person       8 non-null object\n",
+      "height       8 non-null float64\n",
+      "weight       8 non-null int64\n",
+      "foot size    8 non-null int64\n",
+      "dtypes: float64(1), int64(2), object(1)\n",
+      "memory usage: 336.0+ bytes\n"
+     ]
+    }
+   ],
+   "source": [
+    "data.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>height</th>\n",
+       "      <th>weight</th>\n",
+       "      <th>foot size</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>8.000000</td>\n",
+       "      <td>8.000000</td>\n",
+       "      <td>8.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>5.636250</td>\n",
+       "      <td>154.375000</td>\n",
+       "      <td>9.375000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>0.333721</td>\n",
+       "      <td>28.962722</td>\n",
+       "      <td>2.263846</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>100.000000</td>\n",
+       "      <td>6.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>5.480000</td>\n",
+       "      <td>145.000000</td>\n",
+       "      <td>7.750000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>5.665000</td>\n",
+       "      <td>157.500000</td>\n",
+       "      <td>9.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>5.920000</td>\n",
+       "      <td>172.500000</td>\n",
+       "      <td>11.250000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>6.000000</td>\n",
+       "      <td>190.000000</td>\n",
+       "      <td>12.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         height      weight  foot size\n",
+       "count  8.000000    8.000000   8.000000\n",
+       "mean   5.636250  154.375000   9.375000\n",
+       "std    0.333721   28.962722   2.263846\n",
+       "min    5.000000  100.000000   6.000000\n",
+       "25%    5.480000  145.000000   7.750000\n",
+       "50%    5.665000  157.500000   9.500000\n",
+       "75%    5.920000  172.500000  11.250000\n",
+       "max    6.000000  190.000000  12.000000"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.describe()"
    ]
   },
   {
@@ -190,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "_cell_guid": "675d9f73-fd16-4fcf-afe8-09ed42926eb1",
     "_uuid": "808424eb9c199176154d0a08c232f07f026b983c"
@@ -296,14 +426,15 @@
        "7       1    5.75     150          9"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Subset data and assign 0 and 1 \n",
-    "\n",
+    "data['Person'] = data['Person'].replace('male', 0)\n",
+    "data['Person'] = data['Person'].replace('female', 1)\n",
     "data\n",
     "# Person\theight\tweight\tfoot size\n",
     "# 0\t0\t6.00\t180\t12\n",
@@ -350,16 +481,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "_cell_guid": "6e663b44-ef56-4883-979b-7de74a2bf815",
     "_uuid": "bcc8bfe1097759c842331a505aec91b05057a427"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean values for male features\n",
+      "height         5.855\n",
+      "weight       176.250\n",
+      "foot size     11.250\n",
+      "dtype: float64\n",
+      "\n",
+      "Variance values for male features\n",
+      "height         0.035033\n",
+      "weight       122.916667\n",
+      "foot size      0.916667\n",
+      "dtype: float64\n",
+      "\n",
+      "Mean values for female features\n",
+      "height         5.4175\n",
+      "weight       132.5000\n",
+      "foot size      7.5000\n",
+      "dtype: float64\n",
+      "\n",
+      "Variance values for female features\n",
+      "height         0.097225\n",
+      "weight       558.333333\n",
+      "foot size      1.666667\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here \n",
+    "# mean\n",
+    "male_mean = data[['height', 'weight', 'foot size']][data['Person'] == 0].mean()\n",
+    "fem_mean = data[['height', 'weight', 'foot size']][data['Person'] == 1].mean()\n",
+    "\n",
+    "# var\n",
+    "male_var = data[['height', 'weight', 'foot size']][data['Person'] == 0].var()\n",
+    "fem_var = data[['height', 'weight', 'foot size']][data['Person'] == 1].var()\n",
     "\n",
     "\n",
+    "print('Mean values for male features\\n{}'.format(male_mean))\n",
+    "print()\n",
+    "\n",
+    "print('Variance values for male features\\n{}'.format(male_var))\n",
+    "print()\n",
+    "\n",
+    "print('Mean values for female features\\n{}'.format(fem_mean))\n",
+    "print()\n",
+    "\n",
+    "print('Variance values for female features\\n{}'.format(fem_var))\n",
     "# Example output\n",
     "\n",
     "# Mean values for male features\n",
@@ -418,15 +595,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "_cell_guid": "af95b61e-c03a-4010-a20a-5503419fcc31",
     "_uuid": "cfcdc3f6c8d4738fdc39368d0c34dd12566d1eab"
    },
    "outputs": [],
    "source": [
-    "def likelihood(xi, mu, var):\n",
-    "     pass"
+    "def likelihood(xi, mean, var):\n",
+    "    likelihood_1 = (1 / np.sqrt(2 * np.pi * var)) * np.exp((-(xi - mean) ** 2) / (2 * var))\n",
+    "    return likelihood_1"
    ]
   },
   {
@@ -449,14 +627,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "_cell_guid": "d116e64f-7727-4e26-b0ef-7e26199987c6",
     "_uuid": "a6720639e6fd388972ec542a0aa069f9894e570e"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.5, 0.5])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "class_priors = None\n",
+    "class_priors = np.array([0.5, 0.5])\n",
     "class_priors\n",
     "\n",
     "\n",
@@ -481,15 +670,129 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "_cell_guid": "c09efc3e-5a88-4286-8e15-fb8c6e4c56fd",
     "_uuid": "9a0d83b6d803d2ae5f76ce3122e323efa285042e"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Person</th>\n",
+       "      <th>height</th>\n",
+       "      <th>weight</th>\n",
+       "      <th>foot size</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>6.00</td>\n",
+       "      <td>180</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>5.92</td>\n",
+       "      <td>190</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>5.58</td>\n",
+       "      <td>170</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>5.92</td>\n",
+       "      <td>165</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>5.00</td>\n",
+       "      <td>100</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1</td>\n",
+       "      <td>5.50</td>\n",
+       "      <td>150</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1</td>\n",
+       "      <td>5.42</td>\n",
+       "      <td>130</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>1</td>\n",
+       "      <td>5.75</td>\n",
+       "      <td>150</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>-99</td>\n",
+       "      <td>6.00</td>\n",
+       "      <td>130</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Person  height  weight  foot size\n",
+       "0       0    6.00     180         12\n",
+       "1       0    5.92     190         11\n",
+       "2       0    5.58     170         12\n",
+       "3       0    5.92     165         10\n",
+       "4       1    5.00     100          6\n",
+       "5       1    5.50     150          8\n",
+       "6       1    5.42     130          7\n",
+       "7       1    5.75     150          9\n",
+       "8     -99    6.00     130          8"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Add a new example with features of your choice (keep them reasonable)\n",
-    "\n",
+    "data.loc[data.shape[0]] = [-99, 6, 130, 8]\n",
+    "data\n",
     "\n",
     "# Person\theight\tweight\tfoot size\n",
     "# 0\t0\t6.00\t180\t12\n",
@@ -532,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {
     "_cell_guid": "779bfa20-edc7-46e1-93af-c02eddcfb400",
     "_uuid": "bc301cdbbe305dfcf67e71747becb1913d523ace"
@@ -541,22 +844,31 @@
     {
      "data": {
       "text/plain": [
-       "(None, None, None)"
+       "(array([1.57888318, 0.22345873]),\n",
+       " array([5.98674302e-06, 1.67892979e-02]),\n",
+       " array([0.00131122, 0.2866907 ]))"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# height feature\n",
-    "x_1 = None\n",
-    "# weight feature\n",
-    "x_2 = None\n",
-    "# foot size feature\n",
-    "x_3 = None\n",
+    "x_1 = likelihood(xi = data.loc[8]['height'],\n",
+    "                 mean = np.array([male_mean['height'], fem_mean['height']]),\n",
+    "                 var = np.array([male_var['height'], fem_var['height']]))\n",
     "\n",
+    "# weight feature\n",
+    "x_2 = likelihood(xi = data.loc[8]['weight'],\n",
+    "                 mean = np.array([male_mean['weight'], fem_mean['weight']]),\n",
+    "                 var = np.array([male_var['weight'], fem_var['weight']]))\n",
+    "\n",
+    "# foot size feature\n",
+    "x_3 = likelihood(xi = data.loc[8]['foot size'],\n",
+    "                 mean = np.array([male_mean['foot size'], fem_mean['foot size']]),\n",
+    "                 var = np.array([male_var['foot size'], fem_var['foot size']]))\n",
     "x_1, x_2, x_3\n",
     "\n",
     "# (array([1.57888318, 0.22345873]),\n",
@@ -594,14 +906,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {
     "_cell_guid": "1dbb7173-6a94-4139-bc6e-a0bae0aedf2a",
     "_uuid": "73da0d8c3221ba8da84ec939c9d19657dd6129eb"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([6.19707184e-09, 5.37790918e-04])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "prediction = None\n",
+    "prediction = class_priors * x_1 * x_2 * x_3\n",
     "prediction"
    ]
   },
@@ -632,25 +955,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {
     "_cell_guid": "c610d330-5925-4dd8-8d69-e0c496809b87",
     "_uuid": "bfbe4cc0a265d807a3879334f202ba2bc9e13e2d"
    },
    "outputs": [],
    "source": [
-    "evidence = None\n",
-    "posterior = None"
+    "evidence = np.sum(prediction)\n",
+    "posterior = prediction / evidence"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {
     "_cell_guid": "635d4069-4d16-4e88-980a-e8b935fc0d62",
     "_uuid": "5ec35225eb47cad40cf8d32435dbd70d0d6ac053"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1.15230663e-05, 9.99988477e-01])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "posterior\n",
     "# array([1.15230663e-05, 9.99988477e-01])"
@@ -670,7 +1004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 13,
    "metadata": {
     "_cell_guid": "211c17c9-bed9-4cf2-b7cb-00296381c048",
     "_uuid": "8145e97a3a4f945b8986826ac9cef0e174a43725"
@@ -682,14 +1016,14 @@
        "1.0"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Uncomment to check \n",
-    "#np.sum(posterior)\n",
+    "np.sum(posterior)\n",
     "\n",
     "# 1.0"
    ]
@@ -712,14 +1046,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {
     "_cell_guid": "71ca914f-8aa5-4f2b-964a-5eb826e44ff7",
     "_uuid": "e82728c25cbfaa363715bfff91efd8db60c201ee"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Naive Bayes predicts Class: 1\n"
+     ]
+    }
+   ],
    "source": [
     "# Predict the class using argmax\n",
+    "print ('The Naive Bayes predicts Class:', np.argmax(posterior))\n",
     "\n",
     "# The Naive Bayes predicts Class: 1"
    ]
@@ -757,9 +1100,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "learn-env",
    "language": "python",
-   "name": "python3"
+   "name": "learn-env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -771,7 +1114,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
